Enhancement: 添加队列公平限制，听完自己点的歌才能继续点

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -48,15 +48,31 @@ music:
       use_web_client: true  # 尝试 WEB 客户端作为第一备用方案
       prompt_for_manual_potoken: false  # 提示手动 PoToken 作为最后手段（不推荐用于机器人）
 
-# 重复检测配置
+# 重复检测和队列公平性配置
 duplicate_detection:
-  # 队列长度阈值
-  # 当队列总长度（包括当前播放歌曲）小于此值时，允许用户重复添加已请求的歌曲
-  # 当队列总长度大于等于此值时，保持原有的重复检测保护
+  # 队列长度阈值 - 用于动态调整限制严格程度
+  # 当队列总长度（包括当前播放歌曲）小于此值时，临时禁用所有限制：
+  # - 允许用户添加重复歌曲
+  # - 允许用户添加多首不同歌曲
+  # - 允许用户在自己歌曲播放期间添加新歌曲
+  #
+  # 当队列长度达到或超过此值时，恢复正常的公平性限制：
+  # - 每用户同时只能有一首歌曲在队列中
+  # - 禁止添加重复歌曲
+  # - 播放期间不能添加新歌曲
+  #
+  # 使用场景：
+  # - 低峰时段（凌晨、深夜）：用户可以自由添加多首歌曲
+  # - 高峰时段（晚上、周末）：自动启用公平性限制
+  #
+  # 推荐配置：
+  # - 小型服务器（< 50人）：7-10
+  # - 中型服务器（50-200人）：5-7
+  # - 大型服务器（200+人）：3-5
+  # - 高活跃服务器：2-4
   #
   # 默认值: 5
   # 最小值: 1
-  # 推荐值: 3-7（根据服务器活跃度调整）
   queue_length_threshold: 5
 
 # 日志配置
