--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ python-ffmpeg>=1.0.0
 # YouTube video processing
 pytubefix>=6.0.0
 
+# Bilibili video processing
+bilibili-api-python>=17.0.0
+
 # Testing framework
 pytest>=7.0.0
 pytest-asyncio>=0.18.0
